<!-- card_recipe_detail_fragment.xml -->

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp">

    <ScrollView
        android:id="@+id/recipe_detail_fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/recipe_detail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_recipe_image"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:contentDescription="@string/recipe_image_description"
                    android:scaleType="fitCenter" />

                <TextView
                    android:id="@+id/tv_recipe_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:textAppearance="@style/TextAppearance.Material3.HeadlineMedium"
                    android:textSize="24sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_recipe_credit"
                    android:textSize="12sp"
                    android:layout_marginStart="10dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

                <WebView
                    android:id="@+id/wv_source_url"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:textSize="18sp" />

                <WebView
                    android:id="@+id/wv_recipe_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ingredient_list_label"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                    android:layout_margin="10dp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_ingredients"
                    android:layout_width="match_parent"
                    android:layout_height="320dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/recipe_instructions_label"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                    android:layout_margin="10dp"/>

                <WebView
                    android:id="@+id/wv_instructions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:textSize="18sp" />

            </LinearLayout>

        </FrameLayout>

    </ScrollView>

</androidx.cardview.widget.CardView>
